add ticket price script

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <input type="text" name="nameText" id="nameText">
             
             <label for="kmNumber">Km da percorrere</label>
-            <input type="number" name="kmNumber" id="kmNumber">
+            <input type="text" name="kmNumber" id="kmNumber">
 
             <label for="ageSelect">Fascia d'età</label>
             <select id="ageSelect" name="ageSelect">
@@ -31,8 +31,13 @@
               </select>
 
               <button id="submit-btn" type="submit">Genera</button>
-              <button id="cancel-btn"  type="submit">Annulla</button>
+              <button id="cancel-btn"  type="reset">Annulla</button>
         </form>
+
+        <p id="ticketPrice">
+            
+        </p>
+
     </main>
 
     <script src="script.js"></script>
