edit ticket form style

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
               <div class="col2"></div>
               <div class="col2"></div>
 
-              <div id="btnCont" class="col12 flex-row justify-center">
+            <div id="btnCont" class="col12 flex-row justify-center">
                 <button id="submit-btn" type="submit" class="col2">Genera</button>
                 <button id="cancel-btn"  type="reset" class="col2">Annulla</button>
-                </div>
+            </div>
         </form>
 
         <section id="ticketPriceCont">
@@ -50,23 +50,23 @@
             <div id="resultCard" class="col12 display-flex flex-row">
                 <div id="name" class="col3 semibold">
                     Nome passeggero
-                    <div id="nameResult"></div>
+                    <div id="nameResult" class="result"></div>
                 </div>
                 <div id="offer" class="col2 semibold">
-                    Offerta
-                    <div id="offerResult"></div>
+                    Tipo ticket
+                    <div id="offerResult" class="result"></div>
                 </div>
                 <div id="carriage" class="col2 semibold">
                     Carrozza
-                    <div id="carriageResult"></div>
+                    <div id="carriageResult" class="result"></div>
                 </div>
                 <div id="code" class="col2 semibold">
                     Codice Cp
-                    <div id="codeResult"></div>
+                    <div id="codeResult" class="result"></div>
                 </div>
-                <div id="ticketPrice" class="col semibold">
-                    Costo biglietto
-                    <div id="ticketPriceResult">
+                <div id="ticketPrice" class="col2 semibold">
+                    Costo ticket 
+                    <div id="ticketPriceResult" class="result">
 
                     </div>
                 </div>
